--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,12 @@ notifications:
     on_error: always
 
 before_script:
+  - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
+  - ([[ $TRAVIS_TEST != "status" ]] || sudo add-apt-repository -y 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main' )
   - sudo dpkg --add-architecture i386
   - sudo apt-get install -y python3 gcc-multilib pkg-config libffi-dev libffi-dev:i386
   - ([[ -z "$TRAVIS_TEST" ]] || sudo apt-get install -y qemu-system )
+  - ([[ $TRAVIS_TEST != "status" ]] || sudo apt-get install -y clang-format-6.0 )
   - ([[ -z "$TRAVIS_BOARD" ]] || (wget https://s3.amazonaws.com/adafruit-circuit-python/gcc-arm-embedded_7-2017q4-1~trusty3_amd64.deb && sudo dpkg -i gcc-arm-embedded*_amd64.deb))
   - ([[ $TRAVIS_TEST != "qemu" ]] || (wget https://s3.amazonaws.com/adafruit-circuit-python/gcc-arm-embedded_7-2017q4-1~trusty3_amd64.deb && sudo dpkg -i gcc-arm-embedded*_amd64.deb))
 
@@ -97,9 +100,9 @@ script:
   - ([[ $TRAVIS_TEST != "unix" ]] || (cd tests && MICROPY_CPYTHON3=python3.4 MICROPY_MICROPYTHON=../ports/unix/micropython_coverage ./run-tests --emit native))
   - echo -en 'travis_fold:end:test_native\\r'
 
-  - ([[ $TRAVIS_TEST != "unix" ]] || (echo 'Testing with mpy' && echo -en 'travis_fold:start:test_mpy\\r'))
+  - echo 'Testing with mpy' && echo -en 'travis_fold:start:test_mpy\\r'
   - ([[ $TRAVIS_TEST != "unix" ]] || (cd tests && MICROPY_CPYTHON3=python3.4 MICROPY_MICROPYTHON=../ports/unix/micropython_coverage ./run-tests --via-mpy -d basics float))
-  - ([[ $TRAVIS_TEST != "unix" ]] || echo -en 'travis_fold:end:test_mpy\\r')
+  - echo -en 'travis_fold:end:test_mpy\\r'
 
   - ([[ $TRAVIS_TEST != "style" ]] || (echo 'Running clang-format' && echo -en 'travis_fold:start:test_style\\r'))
   - ([[ $TRAVIS_TEST != "style" ]] || (bash tools/clang-format.sh -i && git diff --exit-code))
