--- a/.travis.yml
+++ b/.travis.yml
@@ -45,11 +45,11 @@ notifications:
 
 before_script:
   - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
-  - ([[ $TRAVIS_TEST != "status" ]] || sudo add-apt-repository -y 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main' )
+  - ([[ $TRAVIS_TEST != "style" ]] || sudo add-apt-repository -y 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main' )
   - sudo dpkg --add-architecture i386
   - sudo apt-get install -y python3 gcc-multilib pkg-config libffi-dev libffi-dev:i386
   - ([[ -z "$TRAVIS_TEST" ]] || sudo apt-get install -y qemu-system )
-  - ([[ $TRAVIS_TEST != "status" ]] || sudo apt-get install -y clang-format-6.0 )
+  - ([[ $TRAVIS_TEST != "style" ]] || sudo apt-get install -y clang-format-6.0 )
   - ([[ -z "$TRAVIS_BOARD" ]] || (wget https://s3.amazonaws.com/adafruit-circuit-python/gcc-arm-embedded_7-2017q4-1~trusty3_amd64.deb && sudo dpkg -i gcc-arm-embedded*_amd64.deb))
   - ([[ $TRAVIS_TEST != "qemu" ]] || (wget https://s3.amazonaws.com/adafruit-circuit-python/gcc-arm-embedded_7-2017q4-1~trusty3_amd64.deb && sudo dpkg -i gcc-arm-embedded*_amd64.deb))
 
