--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ notifications:
 
 before_script:
   - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
-  - ([[ $TRAVIS_TEST != "style" ]] || sudo add-apt-repository -y 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main' )
+  - ([[ $TRAVIS_TEST != "style" ]] || (sudo add-apt-repository -y 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main' && sudo apt-get update -qq))
   - sudo dpkg --add-architecture i386
   - sudo apt-get install -y python3 gcc-multilib pkg-config libffi-dev libffi-dev:i386
   - ([[ -z "$TRAVIS_TEST" ]] || sudo apt-get install -y qemu-system )
